# gumbotree

./: Makefile  Makefile.in  README.md  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.4
src/: Makefile  Makefile.am  Makefile.in  gumbotree.h  gumbotree_filter.c  gumbotree_misc.c  gumbotree_node_iterator.c  gumbotree_tree_walker.c  libgumbotree.la  libgumbotree_la-gumbotree_filter.lo  libgumbotree_la-gumbotree_misc.lo  libgumbotree_la-gumbotree_node_iterator.lo  libgumbotree_la-gumbotree_tree_walker.lo
src/.deps/: libgumbotree_la-gumbotree_filter.Plo  libgumbotree_la-gumbotree_misc.Plo  libgumbotree_la-gumbotree_node_iterator.Plo  libgumbotree_la-gumbotree_tree_walker.Plo
src/.libs/: libgumbotree.la  libgumbotree.lai  libgumbotree.so.0  libgumbotree.so.0.0.0
tests/: Makefile  Makefile.am  Makefile.in  check_gumbotree.c
