AC_INIT([gumbotree], [0.0.1], [bug-report@equimed.com])

AC_CONFIG_SRCDIR([src/gumbotree_node_iterator.c])
AC_CONFIG_AUX_DIR([build-aux])

AM_INIT_AUTOMAKE([foreign -Wall -Werror])

AC_PROG_CC
AC_PROG_LIBTOOL

AM_PROG_CC_C_O

AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h])

AC_FUNC_MALLOC

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile tests/Makefile])
AC_OUTPUT
