lib_LTLIBRARIES         = libgumbotree.la
libgumbotree_la_SOURCES = gumbotree_node_iterator.c gumbotree_tree_walker.c gumbotree_filter.c gumbotree_misc.c gumbotree.h
include_HEADERS         = gumbotree.h
libgumbotree_la_CFLAGS  = -Wall -std=c99
libgumbotree_la_LDFLAGS = -lgumbo --version-info 0.0.1
